tests/sumo/basic/container/errors/duplicate_person_id/errors.sumo
Warning: There exists a person and a container with the same id '1'. Starting with SUMO 1.9.0 this is an error.
Warning: Container '1' aborted waiting for v1 at edge 'beg'.
